openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello
spec:
    replicas: 3
    selector:
        matchLabels:
            application: hello
    template:
        metadata:
            labels:
                application: hello
        spec:
            containers:
            - name: hello
              image: docker-registry.default.svc:5000/formadores/hello:latest
              ports:
              - containerPort: 80
              resources:
                  requests:
                      cpu: 100m
                      memory: 0.1G
                  limits:
                      cpu: 200m
                      memory: 0.2G
              livenessProbe:
                  httpGet:
                      path: /
                      port: 80
                  initialDelaySeconds: 15
                  periodSeconds: 10              
              readinessProbe:
                  httpGet:
                      path: /
                      port: 80
                  periodSeconds: 10
