openshift/deployment-weblogic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: weblogic
spec:
    replicas: 1
    selector:
        matchLabels:
            app: weblogic
    template:
        metadata:
            labels:
                app: weblogic
        spec:
            imagePullSecrets:
            - name: regcred
            containers:
            - name: weblogic
              image: store/oracle/weblogic:12.2.1.3-dev
              ports:
              - containerPort: 7001
              - containerPort: 9002
              volumeMounts:
              - name: domain-properties
                mountPath: /u01/oracle/properties/domain.properties
                subPath: domain.properties
            volumes:
            - name: domain-properties
              configMap:
                name: weblogic-domain-properties
---
apiVersion: v1
kind: Service
metadata:
  name: weblogic
spec:
  type: ClusterIP
  selector:
    app: weblogic
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
